# auro

./: .gitignore  .gitmodules  Makefile  README.md  all-images.txt  base-images-diff.txt  git-diff.txt  go.work  go.work.sum  images-diff.txt  scm_version.toml  scm_version_sync.py  sonar-project.properties  sonar.txt
.github/: pull-request.yml  workflow-conf.yml
auro/: README.md  build.sbt
docker/: docker-compose.yml  hadoop.env
dockers/: golang-env.dockerfile  java-env.dockerfile  mysql.dockerfile  protobuf-env.dockerfile  python-base.dockerfile  python-env.dockerfile  rust-env.dockerfile  scala-env.dockerfile  soteria-env.dockerfile  toolkits-env.dockerfile
gaea/: build.sbt  scalastyle-config.xml
golang/: Dockerfile  Makefile  build.sh  go.mod  go.sum  main.go  server.publish.txt  tools.go
hecate/: README.md  pom.xml
jasper/: pom.xml
java/: Makefile  README.md  pom.xml
phoebe/: Makefile  NTOM.py  handleScel.py  handleScelFrame.py  n_factor.py  primes.py  pyproject.toml  python.dockerfile  setup.py  sorting.py
phoebe/cources/: c_13_other_types.py  test1.py  test11.py
phoebe/phoebe_financial/: fn.py
phoebe/proserpine_financial/: lottery.py  random_name.py
phoebe/tests/: str_split.py
python/: .gitignore  .pdm-python  Dockerfile  Makefile  build_image.sh  pyproject.toml  requirements.init.txt  scm_version.toml
python/auro/apis/assoc/v1/: assoc_service_pb2.py  assoc_service_pb2.pyi  assoc_service_pb2_grpc.py  assoc_service_pb2_grpc.pyi
python/auro/apis/common/v1/: types_pb2.py  types_pb2.pyi
python/auro/apis/echo/v1/: enums_pb2.py  greeting_pb2.py  greeting_pb2.pyi  greeting_service_pb2.py  greeting_service_pb2.pyi  greeting_service_pb2_grpc.py  greeting_service_pb2_grpc.pyi
python/auro/clients/: __init__.py  assoc.py  echo.py
python/auro/gateway/: __init__.py
python/auro/gateway/_core/: __init__.py  grpc_channel.py  grpc_client.py  grpc_invoke_wrapper.py
python/auro/gateway/_grpc_clients/: __init__.py  assoc.py  echo.py
python/auro/lib/: __init__.py  _config.py  _protobuf_message.py  _yaml.py
python/auro/logger/: __init__.py  logger.py
python/auro/scripts/: NTOM.py  convert_chinese_num.py  dragon_count.py  fn.py  handleScel.py  handleScelFrame.py  k_avg.py  lottery.py  n_factor.py  primes.py  reserve_link_list.py  sort_alpha.py  sorting.py
python/tests/integration_test/: test_gitkeep.py
python/tests/integration_test/clients/: test_assoc_client.py
python/tests/unit_test/clients/: test_echo_client.py
(+653 files in other folders)
