[project]
name = ""
version = ""
description = ""
authors = [
    {name = "sylvan", email = "sylvan2future@gmail.com"},
]
dependencies = [
    "pandas==1.4.1",
]
requires-python = ">=3.8"
license = {text = "Sylvan"}

[project.urls]
homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
