[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = false

[tool.setuptools.packages.find]
where = ["auro"]

[tool.setuptools.package-data]
auro = ["*.pyi",  "py.typed"]

[tool.pdm.dev-dependencies]
auro = [
    "pytest>=7.2.1",
    "autoflake>=2.0.1",
    "isort>=5.12.0",
    "yapf>=0.32.0",
    "coverage[toml]<6.4",
    "setuptools-scm>=6.4.2",
    "pytest-cov<3.0.0,>=2.12.1",
    "googleapis-common-protos==1.56.0",
    "grpcio==1.46.0",
    "protoc-gen-swagger>=0.1.0",
    "protoc-gen-validate==0.9.0",
    "grpcio-tools==1.46.0",
    "protobuf==3.20.1",
    "google>=3.0.0",
    "google-api-core==2.7.3",
    "google-auth==2.6.6",
    "google-cloud-core==2.3.0",
    "google-cloud-storage==2.3.0",
    "google-crc32c==1.3.0",
    "google-resumable-media==2.3.2",
]
[tool.pdm]
includes = ["auro", "auro/**/*"]
[tool.pdm.version]
source = "file"
path = "scm_version.toml"

[project]
name = "auro"
# version = "0.0.1"
dynamic = ["version"]
description = ""
authors = [
    {name = "sylvan", email = "sylvan2future@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Sylvan"}

[build-system]
requires = ["pdm-pep517<=1.0.6"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov auro --cov-report xml:cov.xml --cov-report term-missing"
testpaths = [
    "tests",
]
source = ["auro",]

[tool.coverage.paths]
source = [
  "auro",
]

[tool.coverage.run]
branch = true
omit = [
  "auro/apis/*",
]

source = [
  "auro",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
]

[tool.mypy]
files = [
    "auro",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_single_line = true
